@@ -1,5 +1,5 @@
 (define errors '())(define todo-num 0)(define (add-error test expected got) (set! errors (append errors (list (list test expected got)))))(display "\r")(let1 val (begin #t) (if (equal? '#t val) (format #t " Running ~d/~d" 1 1934) (begin (add-error '#t '#t val))))
-(display "\r")(let1 val (begin (source-info '(3))) (if (equal? '("<binary-input-port all-tests.scm>" 2) val) (format #t " Running ~d/~d" 2 1934) (add-error '(source-info '(3)) '("<binary-input-port all-tests.scm>" 2) val)))(display "\r")(let1 val (begin (and)) (if (equal? '#t val) (format #t " Running ~d/~d" 3 1934) (begin (add-error '(and) '#t val))))
+(display "\r")(let1 val (begin (source-info '(3))) (if (equal? '("<transcoded-textual-input-port <binary-input-port all-tests.scm>>" 2) val) (format #t " Running ~d/~d" 2 1934) (add-error '(source-info '(3)) '("<transcoded-textual-input-port <binary-input-port all-tests.scm>>" 2) val)))(display "\r")(let1 val (begin (and)) (if (equal? '#t val) (format #t " Running ~d/~d" 3 1934) (begin (add-error '(and) '#t val))))
 (display "\r")(let1 val (begin 3) (if (equal? '3 val) (format #t " Running ~d/~d" 4 1934) (begin (add-error '3 '3 val))))
 (display "\r")(let1 val (begin 4) (if (equal? '4 val) (format #t " Running ~d/~d" 5 1934) (begin (add-error '4 '4 val))))
 (display "\r")(let1 val (begin (if #f #f #t)) (if (equal? '#t val) (format #t " Running ~d/~d" 6 1934) (begin (add-error '(if #f #f #t) '#t val))))
@@ -1466,7 +1466,7 @@
 (display "\r")(let1 val (begin (read-write-invariant? "\v")) (if (equal? '#t val) (format #t " Running ~d/~d" 1872 1934) (begin (add-error '(read-write-invariant? "\v") '#t val))))
 (display "\r")(let1 val (begin (read-write-invariant? "\r")) (if (equal? '#t val) (format #t " Running ~d/~d" 1873 1934) (begin (add-error '(read-write-invariant? "\r") '#t val))))
 (display "\r")(let1 val (begin (read-write-invariant? 'abc)) (if (equal? '#t val) (format #t " Running ~d/~d" 1874 1934) (begin (add-error '(read-write-invariant? 'abc) '#t val))))
-(display "\r")(let1 val (begin (read-write-invariant? '\x40;)) (if (equal? '#t val) (format #t " Running ~d/~d" 1875 1934) (begin (add-error '(read-write-invariant? '\x40;) '#t val))))
+(display "\r")(let1 val (begin (read-write-invariant? '@)) (if (equal? '#t val) (format #t " Running ~d/~d" 1875 1934) (begin (add-error '(read-write-invariant? '@) '#t val))))
 (display "\r")(let1 val (begin (read-write-invariant? 'a\x20;c)) (if (equal? '#t val) (format #t " Running ~d/~d" 1876 1934) (begin (add-error '(read-write-invariant? 'a\x20;c) '#t val))))
 (display "\r")(let1 val (begin (read-write-invariant? '(1 2 3))) (if (equal? '#t val) (format #t " Running ~d/~d" 1877 1934) (begin (add-error '(read-write-invariant? '(1 2 3)) '#t val))))
 (display "\r")(let1 val (begin (read-write-invariant? '(1 #\2 "3"))) (if (equal? '#t val) (format #t " Running ~d/~d" 1878 1934) (begin (add-error '(read-write-invariant? '(1 #\2 "3")) '#t val))))
