@@ -30,8 +30,8 @@ Kernel configured for up to 2 processors.
 Processor type: i486 (Intel 80486)
 Processors active: 0 1
 Primary memory available: 2.00 gigabytes
-Default processor set: 93 tasks, 316 threads, 2 processors
-Load average: 1.54, Mach factor: 0.76
+Default processor set: 83 tasks, 317 threads, 2 processors
+Load average: 1.83, Mach factor: 0.79
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
